# sdtp

./: .gitignore  CMakeLists.txt  README.md
data/cache/: sum_cache.txt
data/cache/NEGCYCLE/NC02/: nc-1.json  nc-10.json  nc-11.json  nc-12.json  nc-13.json  nc-14.json  nc-15.json  nc-16.json  nc-17.json  nc-18.json  nc-19.json  nc-2.json  nc-20.json  nc-21.json  nc-22.json  nc-23.json  nc-24.json  nc-25.json  nc-26.json  nc-27.json  nc-3.json  nc-4.json  nc-5.json  nc-6.json  nc-7.json  nc-8.json  nc-9.json
data/cache/NEGCYCLE/NC03/: nc-28.json  nc-29.json  nc-30.json  nc-31.json  nc-32.json  nc-33.json  nc-34.json  nc-35.json  nc-36.json  nc-37.json  nc-38.json  nc-39.json  (+15 more)
data/cache/VL/: vl-1.json  vl-2.json  vl-3.json  vl-4.json  vl-5.json
data/time/GRID/: sum_density.txt  sum_feas_density.txt  sum_feas_nodes.txt  sum_feas_num-disjunctions.txt  sum_feas_var-disjunctions.txt  sum_infeas_density.txt  sum_infeas_nodes.txt  sum_infeas_num-disjunctions.txt  sum_infeas_var-disjunctions.txt  sum_nodes.txt  sum_num-disjunctions.txt  sum_var-disjunctions.txt
data/time/LATE/: sum_density.txt  sum_feas_density.txt  sum_feas_nodes.txt  sum_feas_num-disjunctions.txt  sum_feas_var-disjunctions.txt  sum_infeas_density.txt  sum_infeas_nodes.txt  sum_infeas_num-disjunctions.txt  sum_infeas_var-disjunctions.txt  sum_nodes.txt  sum_num-disjunctions.txt  sum_var-disjunctions.txt
data/time/NEGCYCLE/: sum_nc02.txt  sum_nc03.txt  sum_nc04.txt  sum_nc05.txt
data/time/RAND/: sum_density.txt  sum_feas_density.txt  sum_feas_nodes.txt  sum_feas_num-disjunctions.txt  sum_feas_var-disjunctions.txt  sum_infeas_density.txt  sum_infeas_nodes.txt  sum_infeas_num-disjunctions.txt  sum_infeas_var-disjunctions.txt  sum_nodes.txt  sum_num-disjunctions.txt  sum_var-disjunctions.txt
data/time/SEQ/: sum_density.txt  sum_feas_density.txt  sum_feas_nodes.txt  sum_feas_num-disjunctions.txt  sum_feas_var-disjunctions.txt  sum_infeas_density.txt  sum_infeas_nodes.txt  sum_infeas_num-disjunctions.txt  sum_infeas_var-disjunctions.txt  sum_nodes.txt  sum_num-disjunctions.txt  sum_var-disjunctions.txt
data/time/VL/: sum_vl.txt  vl-1.json  vl-2.json  vl-3.json  vl-4.json  vl-5.json
data/time/VRP/: sum_feas_vrp.txt  sum_infeas_vrp.txt  sum_vrp.txt
instances/: README.md  README.txt
scripts/: README.md  aggregate.sh  analyzer.sh  execute.sh  experiments.sh  grouper.py  plotter.R  runner.sh  summary.py
source/common/: arc.hpp  def.hpp  dist_graph.hpp  domain.hpp  instance.hpp
source/exec/: sdtp.cpp  sperf.cpp  stest.cpp
source/io/: input.hpp  instance_io.cpp  instance_io.hpp  jfields.hpp  perf_values.hpp  perf_values_io.cpp  perf_values_io.hpp  result.hpp  result_io.cpp  result_io.hpp
source/solver/: .#sdtp_solver_perf.hpp  sdtp_solver.hpp  sdtp_solver_exec.cpp  sdtp_solver_exec.hpp  sdtp_solver_factory.cpp  sdtp_solver_factory.hpp  sdtp_solver_perf.cpp  sdtp_solver_perf.hpp  solver_exec.cpp  solver_exec.hpp  solver_factory.cpp  solver_factory.hpp  solver_perf.cpp  solver_perf.hpp
source/solver/bfdc/: bfdc_alg.cpp  bfdc_alg.hpp
source/solver/cp/: cp.cpp  cp.hpp
source/solver/cra/: bellman_ford_alg.cpp  bellman_ford_alg.hpp  comin_rizzi_alg.cpp  comin_rizzi_alg.hpp  dijkstra_alg.cpp  dijkstra_alg.hpp
source/solver/ilp/: ilp.cpp  ilp.hpp
source/solver/ka/: bellman_ford_alg.cpp  bellman_ford_alg.hpp  dijkstra_alg.cpp  dijkstra_alg.hpp  dinic_alg.cpp  dinic_alg.hpp  dist_alg_bf.cpp  dist_alg_bf.hpp  dist_alg_ja.cpp  dist_alg_ja.hpp  interval.hpp  kumar.cpp  kumar.hpp  max_flow_graph.hpp
source/solver/rult/: red_ult_alg.cpp  red_ult_alg.hpp  two_ways_bf_alg.cpp  two_ways_bf_alg.hpp
source/solver/ult/: apsp_alg.cpp  apsp_alg.hpp  ult_alg.cpp  ult_alg.hpp  ult_model.hpp
source/util/: len_par_data.hpp  precise_timer.hpp  strfmt.hpp  vec_queue.hpp
source/util/heaps/: nary_heap.hpp
source/validator/: validator.cpp  validator.hpp
(+2606 files in other folders)
